client/src/Pages/Blogs/blogStyles.css
@media only screen and (min-width: 600px) {
    
    .allBlogs {
        display: flex;
    }
    .blog {
    flex-wrap: nowrap;
    box-shadow:  6px 6px rgba(0, 0, 0, 0.5);
    line-height: 1.6;
    width: 700px;
    height: 300px;
    display: block;
    overflow: auto;
    padding: 30px;
    margin: 20px;
    background-color:rgba(132,195,207,0.35);
    }
    ::-webkit-scrollbar {
        width: 12px;
    }
     
    ::-webkit-scrollbar-thumb {
        border-radius: 10px;
        box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
    }
    .bTitle {
        font-size: 30px;
    }

}

